# kompas-plugins-nonfree

./: CMakeLists.txt  Doxyfile  PKGBUILD  README.md
debian/: control  copyright
modules/: CMakeLists.txt  FindKompasPlugins.cmake  FindKompasPluginsNonfree.cmake
package/archlinux/kompas-plugins-nonfree/: .gitignore  PKGBUILD
package/archlinux/kompas-plugins-nonfree-git/: PKGBUILD
package/debian/: changelog  kompas-plugins-nonfree.install
package/debian-obs/: debian.kompas-plugins-nonfree-dev.install  debian.kompas-plugins-nonfree.install  kompas-plugins-nonfree.dsc
package/rpm/: kompas-plugins-nonfree.spec
src/: CMakeLists.txt
src/BingMapsRasterModel/: BingMapsRasterModel.conf  BingMapsRasterModel.cpp  BingMapsRasterModel.h  CMakeLists.txt
src/BingMapsRasterModel/Test/: BingMapsRasterModelTest.cpp  BingMapsRasterModelTest.h  CMakeLists.txt
src/CelestialMap1675RasterModel/: CMakeLists.txt  CelestialMap1675RasterModel.conf  CelestialMap1675RasterModel.cpp  CelestialMap1675RasterModel.h
src/GoogleMapsRasterModel/: CMakeLists.txt  GoogleMapsRasterModel.conf  GoogleMapsRasterModel.cpp  GoogleMapsRasterModel.h
src/GoogleMapsRasterModel/Test/: CMakeLists.txt  GoogleMapsRasterModelTest.cpp  GoogleMapsRasterModelTest.h  testConfigure.h.cmake
src/GoogleMapsRasterModel/Test/TestFiles/: map.conf
src/GoogleMapsRasterModel/Test/TestFiles/w2.80/: 7-1.map  7.map
src/GoogleMapsTileModel/: CMakeLists.txt  GoogleMapsTileModel.conf  GoogleMapsTileModel.cpp  GoogleMapsTileModel.h
src/GoogleMarsRasterModel/: CMakeLists.txt  GoogleMarsRasterModel.conf  GoogleMarsRasterModel.cpp  GoogleMarsRasterModel.h
src/GoogleMarsRasterModel/Test/: CMakeLists.txt  GoogleMarsRasterModelTest.cpp  GoogleMarsRasterModelTest.h
src/GoogleMoonRasterModel/: CMakeLists.txt  GoogleMoonRasterModel.conf  GoogleMoonRasterModel.cpp  GoogleMoonRasterModel.h
src/GoogleMoonRasterModel/Test/: CMakeLists.txt  GoogleMoonRasterModelTest.cpp  GoogleMoonRasterModelTest.h
src/KontaminaceCeniaCzRasterModel/: CMakeLists.txt  KontaminaceCeniaCzRasterModel.conf  KontaminaceCeniaCzRasterModel.cpp  KontaminaceCeniaCzRasterModel.h
src/MapyCzRasterModel/: CMakeLists.txt  MapyCzRasterModel.conf  MapyCzRasterModel.cpp  MapyCzRasterModel.h
src/MapyCzRasterModel/Test/: CMakeLists.txt  MapyCzRasterModelTest.cpp  MapyCzRasterModelTest.h  testConfigure.h.cmake
src/MapyCzRasterModel/Test/TestFiles/: map.conf
src/MapyCzRasterModel/Test/TestFiles/base/: 9-1.map  9.map
src/OviMapsRasterModel/: CMakeLists.txt  OviMapsRasterModel.conf  OviMapsRasterModel.cpp  OviMapsRasterModel.h
src/OviMapsRasterModel/Test/: CMakeLists.txt  OviMapsRasterModelTest.cpp  OviMapsRasterModelTest.h
src/YahooMapsRasterModel/: CMakeLists.txt  YahooMapsRasterModel.conf  YahooMapsRasterModel.cpp  YahooMapsRasterModel.h
